feat: the rename update Renames some uniforms and ingame configs. They are now stable and should not change again.

--- a/common/src/main/resources/assets/hdr_mod/lang/en_us.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/en_us.json
@@ -1,17 +1,18 @@
 {
-  "text.autoconfig.hdr_mod.option.enableHDR": "Enable HDR (Restart your game after toggle)",
-  "text.autoconfig.hdr_mod.option.useSDRWhiteLevelAsUiLuminance": "Override auto-get SDR white level",
-  "text.autoconfig.hdr_mod.option.UiLuminance": "UI/SDR content Luminance",
-  "text.autoconfig.hdr_mod.option.overrideSDRWhiteLevel": "Override auto-get SDR white level",
-  "text.autoconfig.hdr_mod.option.SDRWhiteLevel": "SDR white level",
-  "text.autoconfig.hdr_mod.option.overrideMinLuminance": "Override auto-get min luminance",
-  "text.autoconfig.hdr_mod.option.MinLuminance": "Minimum luminance",
-  "text.autoconfig.hdr_mod.option.overrideMaxLuminance": "Override auto-get max luminance",
-  "text.autoconfig.hdr_mod.option.MaxLuminance": "Maximim luminance",
-  "text.autoconfig.hdr_mod.option.overridePrimaries": "Override auto-get primaries/colorspace",
-  "text.autoconfig.hdr_mod.option.primaries": "Primaries",
-  "text.autoconfig.hdr_mod.option.overrideTransferFunction": "Override auto-get transfer function",
-  "text.autoconfig.hdr_mod.option.transferFunction": "Transfer function",
+  "text.autoconfig.hdr_mod.option.enableHDR": "Enable HDR",
+  "text.autoconfig.hdr_mod.option.autoSetUIBrightness": "Auto Set UI Brightness",
+  "text.autoconfig.hdr_mod.option.uiBrightness": "Custom UI Brightness",
+  "text.autoconfig.hdr_mod.option.autoSetGamePaperWhiteBrightness": "Auto Set Game Paper White Brightness",
+  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness": "Custom Game Paper White Brightness",
+  "text.autoconfig.hdr_mod.option.autoSetGameMinimumBrightness": "Auto Set Game Minimum Brightness",
+  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness": "Custom Game Minimum Brightness",
+  "text.autoconfig.hdr_mod.option.autoSetGamePeakBrightness": "Auto Set Game Peak Brightness",
+  "text.autoconfig.hdr_mod.option.customGamePeakBrightness": "Custom Game Peak Brightness",
+  "text.autoconfig.hdr_mod.option.autoSetPrimaries": "Auto Set Primaries",
+  "text.autoconfig.hdr_mod.option.customPrimaries": "Custom Primaries (Only For Debug)",
+  "text.autoconfig.hdr_mod.option.autoSetTransferFunction": "Auto Set Transfer Function",
+  "text.autoconfig.hdr_mod.option.customTransferFunction": "Custom Transfer Function (Only For Debug)",
+  "text.autoconfig.hdr_mod.title": "HDR Mod Config",
   "key.hdr_mod.open_config_menu": "Open Config Menu",
   "key.category.hdr_mod.main": "HDR Mod"
 }
