--- a/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
@@ -1,17 +1,18 @@
 {
-  "text.autoconfig.hdr_mod.option.enableHDR": "启用HDR（重启游戏后生效）",
-  "text.autoconfig.hdr_mod.option.useSDRWhiteLevelAsUiLuminance": "使用自动获取的SDR白电平作为UI亮度",
-  "text.autoconfig.hdr_mod.option.UiLuminance": "UI/SDR内容亮度",
-  "text.autoconfig.hdr_mod.option.overrideSDRWhiteLevel": "覆盖自动获取的SDR白电平",
-  "text.autoconfig.hdr_mod.option.SDRWhiteLevel": "SDR白电平",
-  "text.autoconfig.hdr_mod.option.overrideMinLuminance": "覆盖自动获取的最小亮度",
-  "text.autoconfig.hdr_mod.option.MinLuminance": "最小亮度",
-  "text.autoconfig.hdr_mod.option.overrideMaxLuminance": "覆盖自动获取的最大亮度",
-  "text.autoconfig.hdr_mod.option.MaxLuminance": "最大亮度",
-  "text.autoconfig.hdr_mod.option.overridePrimaries": "覆盖自动获取的显示色域",
-  "text.autoconfig.hdr_mod.option.primaries": "显示色域",
-  "text.autoconfig.hdr_mod.option.overrideTransferFunction": "覆盖自动获取的转换函数",
-  "text.autoconfig.hdr_mod.option.transferFunction": "转换函数",
+  "text.autoconfig.hdr_mod.option.enableHDR": "启用HDR",
+  "text.autoconfig.hdr_mod.option.autoSetUIBrightness": "自动设置UI亮度",
+  "text.autoconfig.hdr_mod.option.uiBrightness": "自定义UI亮度",
+  "text.autoconfig.hdr_mod.option.autoSetGamePaperWhiteBrightness": "自动设置游戏参考白亮度",
+  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness": "自定义游戏参考白亮度",
+  "text.autoconfig.hdr_mod.option.autoSetGameMinimumBrightness": "自动设置游戏最小亮度",
+  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness": "自定义游戏最小亮度",
+  "text.autoconfig.hdr_mod.option.autoSetGamePeakBrightness": "自动设置游戏峰值亮度",
+  "text.autoconfig.hdr_mod.option.customGamePeakBrightness": "自定义游戏峰值亮度",
+  "text.autoconfig.hdr_mod.option.autoSetPrimaries": "自动设置基色",
+  "text.autoconfig.hdr_mod.option.customPrimaries": "自定义基色（仅调试）",
+  "text.autoconfig.hdr_mod.option.autoSetTransferFunction": "自动设置传递函数",
+  "text.autoconfig.hdr_mod.option.customTransferFunction": "自定义传递函数（仅调试）",
+  "text.autoconfig.hdr_mod.title": "HDR Mod配置",
   "key.hdr_mod.open_config_menu": "打开配置菜单",
   "key.category.hdr_mod.main": "HDR Mod"
 }
