--- a/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
@@ -11,13 +11,18 @@
   "text.autoconfig.hdr_mod.option.customGameMinimumBrightness.@Tooltip": "以尼特为单位，设置显示器可输出的最小亮度。设置为负数以使用显示器报告的值。如果不确定，请留 0。",
   "text.autoconfig.hdr_mod.option.customGamePeakBrightness.@Tooltip": "以尼特为单位，设置显示器可输出的最大亮度。设置为负数以使用显示器报告的值。",
   "text.autoconfig.hdr_mod.option.customEotfEmulate.@Tooltip": "校正提升的黑色区域以匹配 SDR。如果操作系统或显示器尚未执行此操作，请使用此项。设置为负数以使用显示器报告的 SDR 参考白亮度。",
+
+  "text.autoconfig.hdr_mod.option.onlyUpgradeNecessaryTexture": "(高级) 仅升级必要纹理",
+  "text.autoconfig.hdr_mod.option.onlyUpgradeNecessaryTexture.@Tooltip": "仅将必要的纹理从 RGBA8 升级到 RGBA16F。启用时，只有渲染目标的颜色纹理和 BEFORE_BLIT Ping-pong纹理会被升级。禁用时，所有由原版创建的彩色纹理都将被升级。",
   "text.autoconfig.hdr_mod.option.autoSetPrimaries": "自动设置基色",
-  "text.autoconfig.hdr_mod.option.customPrimaries": "自定义基色 (仅用于调试)",
+  "text.autoconfig.hdr_mod.option.customPrimaries": "(调试) 自定义基色",
   "text.autoconfig.hdr_mod.option.autoSetTransferFunction": "自动设置传递函数",
-  "text.autoconfig.hdr_mod.option.customTransferFunction": "自定义传递函数 (仅用于调试)",
-  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkound": "强制禁用 GLFW 兼容性调整 (仅用于调试)",
+  "text.autoconfig.hdr_mod.option.customTransferFunction": "(调试) 自定义传递函数",
+  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkound": "(调试) 强制禁用 GLFW 兼容性调整",
+  "text.autoconfig.hdr_mod.option.forceDisableBeforeBlitPipeline": "(调试) 强制禁用 BEFORE_BLIT 管线",
 
   "text.autoconfig.hdr_mod.title": "HDR 模组配置",
   "key.hdr_mod.open_config_menu": "打开配置菜单",
+  "key.hdr_mod.take_hdr_screenshot": "拍摄HDR截图",
   "key.category.hdr_mod.main": "HDR 模组"
 }
