--- a/common/src/main/resources/assets/hdr_mod/lang/en_us.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/en_us.json
@@ -1,23 +1,23 @@
 {
   "text.autoconfig.hdr_mod.option.enableHDR": "Enable HDR",
-  "text.autoconfig.hdr_mod.option.uiBrightness": "Custom UI Brightness",
-  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness": "Custom Game Paper White Brightness",
-  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness": "Custom Game Minimum Brightness",
-  "text.autoconfig.hdr_mod.option.customGamePeakBrightness": "Custom Game Peak Brightness",
+  "text.autoconfig.hdr_mod.option.uiBrightness": "UI Brightness",
+  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness": "Game Paper White Brightness",
+  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness": "Game Minimum Brightness",
+  "text.autoconfig.hdr_mod.option.customGamePeakBrightness": "Game Peak Brightness",
   "text.autoconfig.hdr_mod.option.customEotfEmulate": "EOTF / Gamma Correction 2.2 Threshold",
-  "text.autoconfig.hdr_mod.option.enableHDR.@Tooltip": "Enable HDR (Restart the game to take effect).",
-  "text.autoconfig.hdr_mod.option.uiBrightness.@Tooltip": "In nits, the paper white of UI elements and vanilla game (i.e without shaders). Set it negative to use display reported SDR paper white.",
-  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness.@Tooltip": "In nits, the paper white of the game/scene. Set it negative to use display reported value.",
-  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness.@Tooltip": "In nits, the minimum the display can output. Set it negative to use display reported value. Leave 0 if unsure.",
-  "text.autoconfig.hdr_mod.option.customGamePeakBrightness.@Tooltip": "In nits, the maximum the display can output. Set it negative to use display reported value.",
-  "text.autoconfig.hdr_mod.option.customEotfEmulate.@Tooltip": "Correct raised shadows to match SDR. Use if OS or display doesn't do so already. Set it negative to use display reported SDR paper white.",
+  "text.autoconfig.hdr_mod.option.enableHDR.@Tooltip": "Enable HDR (Requires Client Restart).",
+  "text.autoconfig.hdr_mod.option.uiBrightness.@Tooltip": "In nits, the paper white of UI elements and vanilla game (i.e without shaders).\n(Linux) Set it negative to use display reported SDR paper white.",
+  "text.autoconfig.hdr_mod.option.customGamePaperWhiteBrightness.@Tooltip": "In nits, the paper white of the game/scene.\n(Linux) Set it negative to use display reported value.",
+  "text.autoconfig.hdr_mod.option.customGameMinimumBrightness.@Tooltip": "In nits, the minimum the display can output.\n(Linux) Set it negative to use display reported value. Leave 0 if unsure.",
+  "text.autoconfig.hdr_mod.option.customGamePeakBrightness.@Tooltip": "In nits, the maximum the display can output.\n(Linux) Set it negative to use display reported value.",
+  "text.autoconfig.hdr_mod.option.customEotfEmulate.@Tooltip": "Correct raised shadows to match SDR.\nUse if OS or display doesn't do so already.\n(Linux) Set it negative to use display reported SDR paper white.",
 
   "text.autoconfig.hdr_mod.option.onlyUpgradeNecessaryTexture": "Only Upgrade Necessary Texture",
-  "text.autoconfig.hdr_mod.option.onlyUpgradeNecessaryTexture.@Tooltip": "Only upgrade necessary texture from RGBA8 to RGBA16F. When enabled, only color texture of a render target or the BEFORE_BLIT ping-pong texture will be upgraded. When disabled, all color textures created by vanilla will be upgraded.",
+  "text.autoconfig.hdr_mod.option.onlyUpgradeNecessaryTexture.@Tooltip": "Only upgrade necessary texture from RGBA8 to RGBA16F.\nWhen enabled, only color texture of a render target or the BEFORE_BLIT ping-pong texture will be upgraded.\nWhen disabled, all color textures created by vanilla will be upgraded.",
   "text.autoconfig.hdr_mod.option.writeBeforeBlitToMainTarget": "Write BEFORE_BLIT Render Target To Main Render Target",
   "text.autoconfig.hdr_mod.option.writeBeforeBlitToMainTarget.@Tooltip": "If on, ingame screenshot and ReplayMod/Flashback will be severely broken.\n If off, some mods that rewrite blitToScreen may break the game. Keep 'off' if unsure.",
   "text.autoconfig.hdr_mod.option.useRGBA16UNORM": "Use RGBA16 UNORM For BEFORE_BLIT Render Target",
-  "text.autoconfig.hdr_mod.option.useRGBA16UNORM.@Tooltip": "Improve precision when using BT.2100 PQ transfer function, but completely breaks scRGB linear. Keep default if unsure.",
+  "text.autoconfig.hdr_mod.option.useRGBA16UNORM.@Tooltip": "Improve precision when using BT.2100 PQ transfer function, but completely breaks scRGB linear.\nKeep default if unsure.",
 
   "text.autoconfig.hdr_mod.option.autoSetPrimaries": "Auto Set Primaries",
   "text.autoconfig.hdr_mod.option.customPrimaries": "Custom Primaries ",
