fix: Fix #19 in 1.21.1, fix lang files and config names

--- a/common/src/main/resources/assets/hdr_mod/lang/en_us.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/en_us.json
@@ -12,15 +12,15 @@
   "text.autoconfig.hdr_mod.option.customGamePeakBrightness.@Tooltip": "In nits, the maximum the display can output.\n(Linux) Set it negative to use display reported value.",
   "text.autoconfig.hdr_mod.option.customEotfEmulate.@Tooltip": "Correct raised shadows to match SDR.\nUse if OS or display doesn't do so already.\n Set it negative to use display reported SDR paper white.",
 
-  "text.autoconfig.hdr_mod.option.useRGBA16UNORM": "Use UNORM Format For Backbuffer",
-  "text.autoconfig.hdr_mod.option.useRGBA16UNORM.@Tooltip": "Improve precision when using BT.2100 PQ transfer function, but completely breaks scRGB linear.\nKeep default if unsure.",
+  "text.autoconfig.hdr_mod.option.UseUNORMBufferOnLinux": "Use UNORM Format For Backbuffer",
+  "text.autoconfig.hdr_mod.option.UseUNORMBufferOnLinux.@Tooltip": "Improve precision when using BT.2100 PQ transfer function, but completely breaks scRGB linear.\nKeep default if unsure.",
 
   "text.autoconfig.hdr_mod.option.autoSetPrimaries": "Auto Set Primaries",
   "text.autoconfig.hdr_mod.option.customPrimaries": "Custom Primaries",
   "text.autoconfig.hdr_mod.option.autoSetTransferFunction": "Auto Set Transfer Function",
   "text.autoconfig.hdr_mod.option.customTransferFunction": "Custom Transfer Function",
-  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkound": "Force Disable GLFW Workaround",
-  "text.autoconfig.hdr_mod.option.forceDisableBeforeBlitPipeline": "Force Disable the BEFORE_BLIT Pipeline",
+  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkaround": "Force Disable GLFW Workaround",
+  "text.autoconfig.hdr_mod.option.forceDisableBlitShaderReplacement": "Force Disable Replacement of MainTarget blit_screen Shader",
 
   "text.autoconfig.hdr_mod.title": "HDR Mod Config",
 
