--- a/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hdr_mod/lang/zh_cn.json
@@ -12,15 +12,15 @@
   "text.autoconfig.hdr_mod.option.customGamePeakBrightness.@Tooltip": "以尼特为单位，设置显示器可输出的最大亮度。(Linux) 设置为负数以使用显示器报告的值。",
   "text.autoconfig.hdr_mod.option.customEotfEmulate.@Tooltip": "校正提升的黑色区域以匹配 SDR。如果操作系统或显示器尚未执行此操作，请使用此项。设置为负数以使用显示器报告的 SDR 参考白亮度。",
 
-  "text.autoconfig.hdr_mod.option.useRGBA16UNORM": "为屏幕缓冲区使用归一化定点格式",
-  "text.autoconfig.hdr_mod.option.useRGBA16UNORM.@Tooltip": "提高使用BT.2100 PQ转换函数时的精度，但会完全破坏scRGB。 如果不确定，请保持默认值。",
+  "text.autoconfig.hdr_mod.option.UseUNORMBufferOnLinux": "为屏幕缓冲区使用归一化定点格式",
+  "text.autoconfig.hdr_mod.option.UseUNORMBufferOnLinux.@Tooltip": "提高使用BT.2100 PQ转换函数时的精度，但会完全破坏scRGB。 如果不确定，请保持默认值。",
 
   "text.autoconfig.hdr_mod.option.autoSetPrimaries": "自动设置基色",
   "text.autoconfig.hdr_mod.option.customPrimaries": "自定义基色",
   "text.autoconfig.hdr_mod.option.autoSetTransferFunction": "自动设置传递函数",
   "text.autoconfig.hdr_mod.option.customTransferFunction": "自定义传递函数",
-  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkound": "强制禁用 GLFW 兼容性调整",
-  "text.autoconfig.hdr_mod.option.forceDisableBeforeBlitPipeline": "强制禁用 BEFORE_BLIT 管线",
+  "text.autoconfig.hdr_mod.option.forceDisableGlfwWorkaround": "强制禁用 GLFW 兼容性调整",
+  "text.autoconfig.hdr_mod.option.forceDisableBlitShaderReplacement": "强制禁用对主渲染目标的blit_screen着色器替换",
 
   "text.autoconfig.hdr_mod.title": "HDR 模组配置",
 
